HSEARCH-4933 Upgrade -orm6 artifacts to Hibernate ORM 6.2.8.Final